examples/c/error-codes/violates-constraint/fatal/CV-FD1-bad-static.output
CV-FD1-bad-static.c:3:10: error: redefinition of parameter 'x'
int f(x, x)
         ^
CV-FD1-bad-static.c:4:14: error: parameter named 'y' is missing
      int x, y;
             ^
CV-FD1-bad-static.c:10:20: warning: too many arguments in call to 'f'
      return f(0, 0);
             ~     ^
1 warning and 2 errors generated.
Translation failed (kcc_config dumped). To repeat, run this command in directory fatal:
